--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,9 +7,10 @@
 
     <style name="MyAlertDialogStyle" parent="@style/Theme.AppCompat.Dialog.Alert">
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:typeface">monospace</item>
-        <item name="android:background">@color/light_blue</item>
+        <item name="android:background">@color/blue</item>
     </style>
 
 </resources>
