--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -173,7 +173,7 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/btn_edge"
+                android:background="@drawable/ic_contact_detail_btn_edge"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_profile" />
 
@@ -181,7 +181,7 @@
                 android:id="@+id/iv_favorite"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_empty_favorite"
+                android:src="@drawable/ic_contact_detail_empty_favorite"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_favorite"
                 app:layout_constraintEnd_toEndOf="@+id/tv_favorite"
                 app:layout_constraintStart_toStartOf="@+id/tv_favorite"
@@ -192,7 +192,7 @@
                 android:layout_width="100dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/btn_edge"
+                android:background="@drawable/ic_contact_detail_btn_edge"
                 app:layout_constraintEnd_toStartOf="@+id/tv_call"
                 app:layout_constraintStart_toEndOf="@+id/tv_favorite"
                 app:layout_constraintTop_toBottomOf="@+id/iv_profile" />
@@ -213,7 +213,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="25dp"
-                android:background="@drawable/btn_edge"
+                android:background="@drawable/ic_contact_detail_btn_edge"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_profile" />
 
