--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactDetailFragment"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".ContactDetailFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -162,6 +162,7 @@
                 android:id="@+id/iv_profile"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/img_default_profile"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
