--- a/app/src/main/res/drawable/shape_search_background.xml
+++ b/app/src/main/res/drawable/shape_search_background.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
 
     <corners android:radius="30dp"/>
-    <solid android:color="@color/light_blue"/>
+    <solid android:color="@color/white"/>
 </shape>
