--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ContactListFragment">
 
+    <SearchView
+        android:id="@+id/sv_contactlist_search"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="5dp"
+        android:queryBackground="@drawable/shape_search_background"
+        android:queryHint="이름 또는 번호로 검색해주세요"
+        app:iconifiedByDefault="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_contactlist_list"
@@ -15,7 +26,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/sv_contactlist_search" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/ftbtn_contactlist"
