--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -10,7 +10,6 @@
         android:id="@+id/sv_contactlist_search"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="5dp"
         android:queryBackground="@drawable/shape_search_background"
         android:queryHint="이름 또는 번호로 검색해주세요"
         app:iconifiedByDefault="true"
@@ -22,6 +21,7 @@
         android:id="@+id/rv_contactlist_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="5dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
